[Refactor] Move review outline and sections to _results

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ pdfs/**/*.png
 pdfs/**/*.json
 !pdfs/**/texts/*.json
 !pdfs/**/crops_ordered/**/*.png
-
+!pdfs/**/_results/*.json
 data/
 
 **/.ipynb_checkpoints
