--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,15 @@
 secrets.json
 .vscode/
 *.pth
+
 pdfs/**/*.png
 pdfs/**/*.json
+
+data/
+
 !pdfs/**/texts/*.json
 !pdfs/**/crops_ordered/**/*.png
 !pdfs/**/_results/*.json
-data/
+!pdfs/**/_results/*.pkl
 
 **/.ipynb_checkpoints
